--- a/src/App.css
+++ b/src/App.css
@@ -10,15 +10,23 @@
 }
 
 #login-state{
-  border:2px solid
+  border:2px solid;
+ text-align: right;
 }
 
 #nav-menu{
   border:2px solid; 
+  height:30px
 }
 
+/* #home-page{
+} */
+
 .nav-item{
-  display:contents; 
+  display:block; 
+  float: inline-start;
+  margin:10px;
+  margin-top:5px;
 }
 
 .page-title{
