made minor edits

--- a/src/App.css
+++ b/src/App.css
@@ -82,3 +82,40 @@
 .comment-author{
   color: blue;
 }
+
+
+.text-comment-label{
+margin-top: 50px;
+}
+
+#comments-section{
+  margin-bottom: 10px;
+}
+
+#text-comment-input{
+  width:50%;
+  height:100px;
+  border:2px solid;
+  color:rgb(3, 3, 3);
+  font-size: 20px;
+  background-color: cyan;
+  text-align: left;
+}
+
+#comment-display-button{
+  margin-bottom:30px;
+}
+
+.user-card{
+  border:2px solid;
+  list-style-type:none;
+  float: left;
+  height:200px;
+  width:200px;
+  margin:20px
+}
+
+.user-avatar{
+  height:100px;
+  width:100px;
+}
