add sorting functionality

--- a/src/App.css
+++ b/src/App.css
@@ -163,3 +163,8 @@ margin-top: 50px;
 #sorting-component{
   border:2px solid black;
 }
+
+#sort-message{
+  border:2px solid black;
+  color:rgb(70, 43, 226);
+}
